--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -6,4 +6,8 @@ RTH  2020-07-11 注册   今日已打卡 暂无漏签
 
 ABEL 2020-07-11  产币结束-  认证KYC失败  -  邮件传入官网中 -等待验证中 
 
+ART TOKEN  2020-07-11 注册 永久矿机  三日不登陆 注销 ！    今日已挖矿结算！
+
+
+
 
