--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -26,3 +26,6 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 - 创学！  2020-07-11 目前好像没有漏签！ 继续努力！！！
 
 
+- CIPC    好像漏了一天！ 继续加油！   2020-07-11
+
+- 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-11
