--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -22,7 +22,10 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 睡眠宝宝！  2020-07-11  漏了几天！ 到时候卖几个币就好了！ 还不知道要不要复投！ 要复投到时候复投一下耐心等待就好！！！
   - 官网： http://www.gooddreams.cn/Base/firim    （睡眠宝宝）
   - 交易所APP： http://www.gooddreams.cn/Base/firim?type=2   （果冻乐园）
-
+  - https://tieba.baidu.com/f?kw=%E7%9D%A1%E7%9C%A0%E5%AE%9D%E5%AE%9D&ie=utf-8&tp=0#  (贴吧动态 - 随时知跑路动态！)
+  
+  - - -
+  
 - 创学！  2020-07-11 目前好像没有漏签！ 继续努力！！！
 
 
