--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -5,6 +5,12 @@
 
 - 了解交易所地址，交易所开放日期，软件APP官方网站！  没有官网不要来给我做APP扯蛋！
 
+- - -
+
+- GEC  - 模式改了 每天要进去阅读一下！  贼难受！   
+
+- - -
+
 缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频 
 
 RTH  2020-07-11 注册   今日已打卡 暂无漏签 
@@ -25,7 +31,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
   - https://tieba.baidu.com/f?kw=%E7%9D%A1%E7%9C%A0%E5%AE%9D%E5%AE%9D&ie=utf-8&tp=0#  (贴吧动态 - 随时知跑路动态！)
   
   - - -
-  
+ -
 - 创学！  2020-07-11 目前好像没有漏签！ 继续努力！！！
 
 
