--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -5,6 +5,8 @@
 
 - 了解交易所地址，交易所开放日期，软件APP官方网站！  没有官网不要来给我做APP扯蛋！
 
+- 按照顺序撸！ 别今天注册几个新的，就把前天照顾的矿给漏签了！   除非不给力了，跑路了，或者后面的矿机比前面的一个值钱了！ 咱们再做替换！ 要不然就按照顺序排队！ 先来后到！
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   
