--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -7,6 +7,8 @@
 
 - 按照顺序撸！ 别今天注册几个新的，就把前天照顾的矿给漏签了！   除非不给力了，跑路了，或者后面的矿机比前面的一个值钱了！ 咱们再做替换！ 要不然就按照顺序排队！ 先来后到！
 
+- 我现在在给我自己建立任务！ 推广任务！ 做项目零撸也好，投资推广也好，有空没空写写博客发布一下也是好的，然后做做SEO，加几个人推广一下，总有几个人不懂这些新项目，理解不？不要以为天下没有你的市场，为什么别人推广能成自己不能成，多思考实践一下！
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   
@@ -48,3 +50,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 - **CIPC**   好像漏了一天！ 继续加油！   2020-07-11
 
 - 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-11
+
+－　－　－
+
+- 有声有色 ！　　　掉了好几天　哇靠！　　　淘宝客＋区块链模式，应该有机会撸几个币！希望你别跑路！　　　　－　２０２０－０７－１１　
