--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -9,6 +9,8 @@
 
 - 我现在在给我自己建立任务！ 推广任务！ 做项目零撸也好，投资推广也好，有空没空写写博客发布一下也是好的，然后做做SEO，加几个人推广一下，总有几个人不懂这些新项目，理解不？不要以为天下没有你的市场，为什么别人推广能成自己不能成，多思考实践一下！
 
+－　像那种动不动几天没登陆就要注销你的狗东西，直接看不能撸就让他注销吧！我差你一个注销啊！　
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   
@@ -54,3 +56,9 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 －　－　－
 
 - 有声有色 ！　　　掉了好几天　哇靠！　　　淘宝客＋区块链模式，应该有机会撸几个币！希望你别跑路！　　　　－　２０２０－０７－１１　
+
+－　－　－
+
+－　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-11 
+
+- - -
