--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -11,6 +11,8 @@
 
 －　像那种动不动几天没登陆就要注销你的狗东西，直接看不能撸就让他注销吧！我差你一个注销啊！　
 
+- 如果每个都坚持撸过去，一个月或者两个月（复投模式就是重新投一次，拉人模式就拉几个人稍微推广一下），剩下的研究一下交易模式和交易规则就行了！ 加油！！！
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   
