--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -13,6 +13,8 @@
 
 - 如果每个都坚持撸过去，一个月或者两个月（复投模式就是重新投一次，拉人模式就拉几个人稍微推广一下），剩下的研究一下交易模式和交易规则就行了！ 加油！！！
 
+- 每个项目力争去推广，不要一味想着零撸，我觉得能成为上家尽量去成为上家，每个项目尽量去推广收益也会比零撸扩大好几倍！！！ 加油！！！小伙子！！！
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   
