--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -66,3 +66,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 －　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-11 
 
 - - -
+
+- 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 20200711 
+
+
