--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -69,4 +69,6 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 
 - 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 20200711 
 
-
+  - （右上角圈圈转满表示满4分钟，点击右上角“看广告领钻石”领取当天的0.5钻石。） 说实话现在4分钟对我来说挺久的做一个矿。 还有很多等我撸呢！ 加油吧！ 能撸则撸！ 从早撸到晚确实有点累，赚点钱不容易，撸点钱也不容易！
+  
+  
