--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -71,4 +71,5 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 
   - （右上角圈圈转满表示满4分钟，点击右上角“看广告领钻石”领取当天的0.5钻石。） 说实话现在4分钟对我来说挺久的做一个矿。 还有很多等我撸呢！ 加油吧！ 能撸则撸！ 从早撸到晚确实有点累，赚点钱不容易，撸点钱也不容易！
   
-  
+  - 贴吧时事动态： https://tieba.baidu.com/f?kw=%E5%87%B9%E9%9F%B3&ie=utf-8&tab=main
+- - - 
