--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -73,3 +73,11 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
   
   - 贴吧时事动态： https://tieba.baidu.com/f?kw=%E5%87%B9%E9%9F%B3&ie=utf-8&tab=main
 - - - 
+
+- ***活力链*** 探索“分享经济”潮流新趋势活力链开启消费经济模式新篇章  
+- 白皮书都写好了，希望你不要黄！  
+
+- - -
+
+- Zen token    注册没有任何反应   不过听说一个币目前30    再观察一下！！！
+
