--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -90,4 +90,8 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 
 - 芝嫲视频   可以持有180天后才过期  体验卡周期是60天 这个够人道！ 我喜欢！  不像其他的矿，体验三十天就是三十天过期！    - 2020-07-12
 
+- - -
+
+- 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-12
+
 
