--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -32,11 +32,13 @@
 
 缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频 
 
-RTH  2020-07-11 注册   今日已打卡 暂无漏签 
+RTH  2020-07-11 注册   今日已打卡 暂无漏签  2020-07-12 启动成功开始挖矿！ 等待半小时去收矿！
 
 ABEL 2020-07-11  产币结束-  认证KYC失败  -  邮件传入官网中 -等待验证中 
 
-ART TOKEN  2020-07-11 注册 永久矿机  三日不登陆 注销 ！    今日已挖矿结算！
+ART TOKEN  2020-07-11 注册 永久矿机  三日不登陆 注销 ！    今日已挖矿结算！    2020-07-12 今日已打卡
+
+---
 
 极客网络 2020-07-11 注册   送一辆宝马车！    今日已签到！ 暂无漏签 ！
 
