--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -22,13 +22,15 @@
 
 - - -
 
-- 温商链 -  这个不知道怎么玩的 ，币也不知道怎么卖 - 后期再看看！  今天进去签到一下！   - 2020-07-11 
+- 温商链 -  这个不知道怎么玩的 ，币也不知道怎么卖 - 后期再看看！  今天进去签到一下！                  - 2020-07-11 
 
 - 贴吧动态： https://tieba.baidu.com/f?kw=%E6%B8%A9%E5%95%86%E9%93%BE&ie=utf-8&tab=main
 
 - 贴吧有人在收币！ 可以的！ 看一下有没有机会！   每个月进去收矿收一下即可！ 坚持住！
 
 - - - 
+
+- 车盟世界 - 更新维护无法签到！！！    - 2020-07-12
 
 缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频 
 
