--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -60,7 +60,13 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！
 - 创学！  2020-07-11 目前好像没有漏签！ 继续努力！！！
 
 
-- **CIPC**   好像漏了一天！ 继续加油！   2020-07-11
+- **CIPC**   好像漏了一天！ 继续加油！   2020-07-11     三小时后领取，隔天作废，白挖了好几天我靠！！！
+
+ - 关于玩法：每天【点开始挖矿】3小时后【点领取收益】，注意：每天挖矿时间为3个小时，如果你每天在21:00分之前操作到晚上24:00结束，还可以领取的到，如果你晚上21：00后开始点击挖矿到晚上24:00，时间不够3小时就视为不够一个3小时挖矿时间，自动作废。每天24：00结算。
+
+关于提现：C2C交易，公测版结束开盘价格10元
+
+- - -
 
 - 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-11
 
