--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -105,4 +105,10 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-12
 
+- - -
 
+
+- EPC生态环保链  - 个人算力必须大于1 ！！！   应该是要复投还是拉人怎么地！？ 或者是投资力度大于贡献值！？？    这个不看好！随时放弃！   - 2020-07-12
+
+
+- - -
