--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -113,3 +113,15 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
  - 复投一次看一下！
  
 - - -
+
+
+---
+---
+---
+
+- 任务平台
+
+- 悬赏猫 - 发布任务贼贵，尽量在上面做任务，不发布！！！    --  2020-07-12  今日已打卡
+
+- 微帮  - 每天免费撸一毛！！    - - 2020-07-12 今日已打卡 
+
