--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -93,7 +93,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-- Zen token    注册没有任何反应   不过听说一个币目前30    再观察一下！！！
+- Zen token    注册没有任何反应   不过听说一个币目前30    再观察一下！！！  -2020-07-12 实名没给我！！！
 
 - https://www.mapcrm.com.cn/Index.php/Home/Login/index.html
 
