--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -1,5 +1,8 @@
 
 - 15678313542   2484113413
+
+- 记录方法 Contrl+F4 搜索 前一天动态 然后记录  - 今日search 2020-07-11 
+
 - 关注时事动态，记录项目行情以及跑路情况！ 哪个币价格行情最高我把它排前面先弄！
 
 - 看广告的不要！ 尽量不要！尽量删除放后！
@@ -114,6 +117,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
  
 - - -
 
+- 多多短视频  -  看不懂 - - @！！  - 2020-07-12 
 
 ---
 ---
