--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -120,6 +120,11 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 - 多多短视频  -  看不懂 - - @！！  - 2020-07-12 
 
 ---
+
+- Free Space     应该能卖一两个   - 2020-07-12
+
+
+---
 ---
 ---
 
