--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -91,7 +91,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
   - 贴吧时事动态： https://tieba.baidu.com/f?kw=%E5%87%B9%E9%9F%B3&ie=utf-8&tab=main
 - - - 
 
-- ***活力链*** 探索“分享经济”潮流新趋势活力链开启消费经济模式新篇章  
+- ***活力链*** 探索“分享经济”潮流新趋势活力链开启消费经济模式新篇章   - 2020-07-13 进不去
 - 白皮书都写好了，希望你不要黄！  
 
 - - -
@@ -106,7 +106,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-- 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-12
+- 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-12  
 
 - - -
 
