--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -96,7 +96,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-- Zen token    注册没有任何反应   不过听说一个币目前30    再观察一下！！！  -2020-07-12   第一次运行成功！
+- Zen token     听说一个币目前30    再观察一下！！！  -2020-07-12   第一次运行成功！
 
 - https://www.mapcrm.com.cn/Index.php/Home/Login/index.html
 
@@ -117,17 +117,17 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
  
 - - -
 
-- 多多短视频  -  看不懂 - - @！！  - 2020-07-12 
+# 多多短视频  -  看不懂 - - @！！  - 2020-07-13
 
 ---
 
-- Free Space     应该能卖一两个   - 2020-07-12
+ # Free Space     应该能卖一两个   - 2020-07-13
 
 - - -
 
-- 凹音短视频      漏了好几天  到时候看一下能不能卖一两个   - 2020-07-13 
+# 凹音短视频      漏了好几天  到时候看一下能不能卖一两个   - 2020-07-13 
 
-# 趣生活    - 2020 - 07 - 13
+# 趣生活    - 2020 - 07 - 13  静态页面 跑路的节奏 
 
 ---
 ---
@@ -135,7 +135,8 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - 任务平台
 
-- 悬赏猫 - 发布任务贼贵，尽量在上面做任务，不发布！！！    --  2020-07-12  今日已打卡
+# 悬赏猫 - 发布任务贼贵，尽量在上面做任务，不发布！！！    --  2020-07-13  今日已打卡
 
-- 微帮  - 每天免费撸一毛！！    - - 2020-07-12 今日已打卡 
+# 微帮  - 每天免费撸一毛！！    - - 2020-07-13 今日已打卡 
 
+# 豆豆趣玩  - 今天没出金！！！ 草！  - - 2020-07-13 今日已打卡 
