--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -1,4 +1,6 @@
 
+# 《借力系统》 - 借什么？ 借系统
+
 - 15678313542   2484113413
 
 - 记录方法 Contrl+F4 搜索 前一天动态 然后记录  - 今日search 2020-07-11 
@@ -21,7 +23,7 @@
 
 - - -
 
-- GEC  - 模式改了 每天要进去阅读一下！  贼难受！   
+- GEC  - 模式改了 每天要进去阅读一下！  贼难受！   - 2020-07-13 
 
 - - -
 
@@ -71,7 +73,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-- 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-11
+# 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-13
 
 －　－　－
 
@@ -84,7 +86,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-- 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 20200711 
+- 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 20200713 
 
   - （右上角圈圈转满表示满4分钟，点击右上角“看广告领钻石”领取当天的0.5钻石。） 说实话现在4分钟对我来说挺久的做一个矿。 还有很多等我撸呢！ 加油吧！ 能撸则撸！ 从早撸到晚确实有点累，赚点钱不容易，撸点钱也不容易！
   
@@ -96,7 +98,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-- Zen token     听说一个币目前30    再观察一下！！！  -2020-07-12   第一次运行成功！
+# Zen token     听说一个币目前30    不怎么看好，矿机刷新领取收益都没有反应，肯定有BUG 猫腻  暂无漏签！  -2020-07-13   
 
 - https://www.mapcrm.com.cn/Index.php/Home/Login/index.html
 
