--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -39,7 +39,7 @@
 
 缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频 
 
-RTH  2020-07-11 注册   今日已打卡 暂无漏签  2020-07-12 启动成功开始挖矿！ 等待半小时去收矿！  - 2020-07-12
+# RTH  2020-07-11 注册   今日已打卡 暂无漏签  2020-07-12 启动成功开始挖矿！ 等待半小时去收矿！ 收益又没领到，这方面还得多反思，回忆 - 2020-07-13  等下回来！
 
 ABEL 2020-07-11  产币结束-  认证KYC失败  -  邮件传入官网中 -等待验证中    - 2020-07-12 KYC已认证
 
