--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -37,7 +37,7 @@
 
 - 车盟世界 - 更新维护无法签到！！！    - 2020-07-12
 
-缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频 
+缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频  - 2020-07-13 
 
 # RTH  2020-07-11 注册   今日已打卡 暂无漏签  2020-07-12 启动成功开始挖矿！ 等待半小时去收矿！ 收益又没领到，这方面还得多反思，回忆 - 2020-07-13  等下回来！
 
@@ -62,7 +62,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
   
   - - -
  -
-- 创学！  2020-07-11 目前好像没有漏签！ 继续努力！！！    - 2020 -07- 12 
+- 创学！  2020-07-11 目前好像没有漏签！ 继续努力！！！    - 2020 -07- 13 
 
 
 - **CIPC**   好像漏了一天！ 继续加油！   2020-07-11     三小时后领取，隔天作废，白挖了好几天我靠！！！
@@ -81,7 +81,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 －　－　－
 
-－　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-12
+－　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-13
  - 茶益未来是基于区块链技术的茶叶价值生态
 
 - - -
@@ -108,7 +108,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-- 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-12  
+# 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-13 已打开  
 
 - - -
 
