--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -21,6 +21,10 @@
 
 - 每个项目力争去推广，不要一味想着零撸，我觉得能成为上家尽量去成为上家，每个项目尽量去推广收益也会比零撸扩大好几倍！！！ 加油！！！小伙子！！！
 
+# 看看OTC交易所，动不动就是50个100个起卖的，就不要认证了，直接走吧，我感觉今天被反撸了，   持有几个币要是没有推广的人基本上是被割韭菜！
+
+# 再看看 ，我的页面有没有 客服的按钮，有没有反馈的按钮， 再看看有没有官方网站，没有就别玩了！ 扯几把蛋的~！
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   - 2020-07-13 
@@ -73,7 +77,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 - - -
 
-# 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-13
+# 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-14
 
 －　－　－
 
@@ -81,7 +85,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 
 －　－　－
 
-－　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-13
+－　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-14 
  - 茶益未来是基于区块链技术的茶叶价值生态
 
 - - -
@@ -130,6 +134,8 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-12
 # 凹音短视频      漏了好几天  到时候看一下能不能卖一两个   - 2020-07-13 
 
 # 趣生活    - 2020 - 07 - 13  静态页面 跑路的节奏 
+
+# 乐拍  - 2020-07-14    已打开 无漏签！
 
 ---
 ---
