--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -31,7 +31,7 @@
 
 - - -
 
-- 温商链 -  这个不知道怎么玩的 ，币也不知道怎么卖 - 后期再看看！  今天进去签到一下！                  - 2020-07-11 
+- 温商链 -  这个不知道怎么玩的 ，币也不知道怎么卖 - 后期再看看！  今天进去签到一下！                  - 2020-07-14 
 
 - 贴吧动态： https://tieba.baidu.com/f?kw=%E6%B8%A9%E5%95%86%E9%93%BE&ie=utf-8&tab=main
 
@@ -41,13 +41,13 @@
 
 - 车盟世界 - 更新维护无法签到！！！    - 2020-07-14
 
-缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频  - 2020-07-13 
+缘逗视频  2020-07-11 注册    今日已打卡   没有漏签    任务要求看六个广告视频  - 2020-07-14 
 
 # RTH  2020-07-11 注册   今日已打卡 暂无漏签  2020-07-12 启动成功开始挖矿！ 等待半小时去收矿！ 收益又没领到，这方面还得多反思，回忆 - 2020-07-13  等下回来！
 
-ABEL 2020-07-11  产币结束-  认证KYC失败  -  邮件传入官网中 -等待验证中    - 2020-07-12 KYC已认证
+ABEL 2020-07-11  产币结束-  认证KYC失败  -  邮件传入官网中 -等待验证中    - 2020-07-14 KYC已认证 观察一下怎么交易
 
-ART TOKEN  2020-07-11 注册 永久矿机  三日不登陆 注销 ！    今日已挖矿结算！    2020-07-12 今日已打卡
+ART TOKEN  2020-07-11 注册 永久矿机  三日不登陆 注销 ！    今日已挖矿结算！    2020-07-14 今日已打卡
 
 ---
 
@@ -149,4 +149,4 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-14
 
 # 微帮  - 每天免费撸一毛！！    - - 2020-07-14 今日已打卡 
 
-# 豆豆趣玩  - 今天没出金！！！ 草！  - - 2020-07-13 今日已打卡 
+# 豆豆趣玩  - 今天没出金！！！ 草！  - - 2020-07-14 今日已打卡 
