--- a/闲鱼虚拟资源玩法.md
+++ b/闲鱼虚拟资源玩法.md
@@ -23,6 +23,28 @@
 
 # 闲鱼上卖虚拟教程资料如何避免违规从此横着走   
 
+- 小心违禁词 - 谐音字 错别字代替 英文代替  关键词中间加空格
+
+- 选对类目 - 虚拟资源应该放在哪个类目里面？   - 用卖实体产品的方式来卖虚拟产品   -  实体+虚拟 （U盘）
+
+- 几千G的资料需要提炼一些资料整理出来 
+
+
+# 推广手法
+
+- 短视频
+- 音频
+- 自媒体
+- 初期靠数量而不是靠质量
+
+- 教程   - 养殖教程，育儿教程，小吃教程，广场舞教程
+- 服务   - 塔罗服务，风水服务，八字服务，
+- 培训    - 追女培训 ，房地产投资培训，理财培训，撩汉培训，礼仪培训，股票培训，情商培训，
+- 趋势  - 阅读大量书籍，教程，线下培训，掌握一个行业的趋势
+
+- SEO - 搜索购买- 一般那些人搜索购买什么资源？    - 第二种是闲鱼推送- 闲鱼会推送什么样的资源给客户？     
+
+
 
 
 
