--- a/闲鱼虚拟资源玩法.md
+++ b/闲鱼虚拟资源玩法.md
@@ -29,6 +29,7 @@
 
 - 几千G的资料需要提炼一些资料整理出来 
 
+# 日入1000+的虚拟项目操作指南 网赚教程
 
 # 推广手法
 
@@ -36,13 +37,16 @@
 - 音频
 - 自媒体
 - 初期靠数量而不是靠质量
+- SEO - 搜索购买- 一般那些人搜索购买什么资源？    - 第二种是闲鱼推送- 闲鱼会推送什么样的资源给客户？    
+
+# 推广项目 
 
 - 教程   - 养殖教程，育儿教程，小吃教程，广场舞教程
 - 服务   - 塔罗服务，风水服务，八字服务，
 - 培训    - 追女培训 ，房地产投资培训，理财培训，撩汉培训，礼仪培训，股票培训，情商培训，
 - 趋势  - 阅读大量书籍，教程，线下培训，掌握一个行业的趋势
 
-- SEO - 搜索购买- 一般那些人搜索购买什么资源？    - 第二种是闲鱼推送- 闲鱼会推送什么样的资源给客户？     
+ 
 
 
 
