--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -25,6 +25,8 @@
 
 # 再看看 ，我的页面有没有 客服的按钮，有没有反馈的按钮， 再看看有没有官方网站，没有就别玩了！ 扯几把蛋的~！
 
+# 标记一下初始时间和结束时间，两个月没有出的小矿机就不玩了吧，放着。静观其变。
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   - 2020-07-14   阅读完成！ 
@@ -137,6 +139,8 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-14
 
 
 # 乐拍  - 2020-07-14    已打开 无漏签！ - 2020-07-14 
+
+# 音恋 开始时间：2020-07-15              - 2020-07-15 
 
 
 ---
