--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -140,7 +140,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-14
 
 # 乐拍  - 2020-07-14    已打开 无漏签！ - 2020-07-14 
 
-# 音恋 开始时间：2020-07-15              - 2020-07-15 
+# 音恋 开始时间：2020-07-15     认证费1.5         - 2020-07-15 
 
 
 ---
