--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -140,7 +140,9 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-14
 
 # 乐拍  - 2020-07-14    已打开 无漏签！ - 2020-07-14 
 
-# 音恋 开始时间：2020-07-15     认证费1.5         - 2020-07-15 
+# 音恋 开始时间：2020-07-15     认证费1.5   -有绑定设备的，之前我的两台矿机就是因为有绑定设备给毁了。 一开始就奠定了你走不远，为什么？因为手机用几年就换了。      - 2020-07-15
+
+
 
 
 ---
@@ -149,8 +151,8 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-14
 
 - 任务平台
 
-# 悬赏猫 - 发布任务贼贵，尽量在上面做任务，不发布！！！    --  2020-07-14  今日已打卡
+# 悬赏猫 - 发布任务贼贵，尽量在上面做任务，不发布！！！    --  2020-07-15  今日已打卡
 
-# 微帮  - 每天免费撸一毛！！    - - 2020-07-14 今日已打卡 
+# 微帮  - 每天免费撸一毛！！    - - 2020-07-15 今日已打卡 
 
-# 豆豆趣玩  - 今天没出金！！！ 草！  - - 2020-07-14 今日已打卡 
+# 豆豆趣玩  - 今天没出金！！！ 草！  - - 2020-07-15 今日已打卡 
