--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -125,7 +125,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-14
  
 - - -
 
-# 多多短视频  -  看不懂 - - @！！  - 2020-07-14
+# 多多短视频  初始时间：7-14号大概   看不懂 - - @！！  - 2020-07-15 
 
 ---
 
