--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -61,7 +61,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 睡眠宝宝！  2020-07-11  漏了几天！ 到时候卖几个币就好了！ 还不知道要不要复投！ 要复投到时候复投一下耐心等待就好！！！  -2020-07-14
 
- - 睡眠宝宝  这个要定时的，每天八点以后点击一下，睡觉醒来起来收一下。   
+ - 睡眠宝宝  这个要定时的，每天八点以后点击一下，睡觉醒来起来收一下。    - 2020-17-15
   - 官网： http://www.gooddreams.cn/Base/firim    （睡眠宝宝）
   - 交易所APP： http://www.gooddreams.cn/Base/firim?type=2   （果冻乐园）
   - https://tieba.baidu.com/f?kw=%E7%9D%A1%E7%9C%A0%E5%AE%9D%E5%AE%9D&ie=utf-8&tp=0#  (贴吧动态 - 随时知跑路动态！)
@@ -73,7 +73,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 - 恋窝   - 2020-07-15
 
 
-- **CIPC**   好像漏了一天！ 继续加油！   复投了一次！ 投资1.5认证！ 几把这把算我输！ 感觉要被反撸！ 这鸡毛     三小时后领取，隔天作废，白挖了好几天我靠！！！   2020-07-14    
+- **CIPC**   好像漏了一天！ 继续加油！   复投了一次！ 投资1.5认证！ 几把这把算我输！ 感觉要被反撸！ 这鸡毛     三小时后领取，隔天作废，白挖了好几天我靠！！！   2020-07-15    
 
  - 关于玩法：每天【点开始挖矿】3小时后【点领取收益】，注意：每天挖矿时间为3个小时，如果你每天在21:00分之前操作到晚上24:00结束，还可以领取的到，如果你晚上21：00后开始点击挖矿到晚上24:00，时间不够3小时就视为不够一个3小时挖矿时间，自动作废。每天24：00结算。
 
@@ -81,47 +81,49 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 - - -
 
-# 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-14
+# 比特金矿（BGC）   看不懂，刚做的项目，补上，别掉了！   2020-07-15
 
 －　－　－
 
-- 有声有色 ！　　　掉了好几天　哇靠！　　　淘宝客＋区块链模式，应该有机会撸几个币！希望你别跑路！　　　　－　２０２０－０７－１4　
+- 有声有色 ！　　　掉了好几天　哇靠！　　　淘宝客＋区块链模式，应该有机会撸几个币！希望你别跑路！　　　　－　２０２０－０７－15 刷不进去 不知是不是跑路了 
 
 －　－　－
 
-－　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-14 
+－　茶益未来！    应该是个好项目！   实体区块链 ，茶叶的区块链！这位老板应该是做茶叶的！ 有钱！ 坚持撸一下！   - 2020-07-15 
  - 茶益未来是基于区块链技术的茶叶价值生态
 
 - - -
 
-- 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 20200713 
+- 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 20200715 
 
   - （右上角圈圈转满表示满4分钟，点击右上角“看广告领钻石”领取当天的0.5钻石。） 说实话现在4分钟对我来说挺久的做一个矿。 还有很多等我撸呢！ 加油吧！ 能撸则撸！ 从早撸到晚确实有点累，赚点钱不容易，撸点钱也不容易！
   
   - 贴吧时事动态： https://tieba.baidu.com/f?kw=%E5%87%B9%E9%9F%B3&ie=utf-8&tab=main
 - - - 
 
-- ***活力链*** 探索“分享经济”潮流新趋势活力链开启消费经济模式新篇章   - 2020-07-14 
+- ***活力链*** 探索“分享经济”潮流新趋势活力链开启消费经济模式新篇章   - 2020-07-15 
 - 白皮书都写好了，希望你不要黄！  
 
 - - -
 
-# Zen token     听说一个币目前30    不怎么看好，矿机刷新领取收益都没有反应，肯定有BUG 猫腻  暂无漏签！  -2020-07-14  
+# Zen token     听说一个币目前30    不怎么看好，矿机刷新领取收益都没有反应，肯定有BUG 猫腻  暂无漏签！  -2020-07-15  
 
 - https://www.mapcrm.com.cn/Index.php/Home/Login/index.html
 
 ----
 
-- 芝嫲视频   可以持有180天后才过期  体验卡周期是60天 这个够人道！ 我喜欢！  不像其他的矿，体验三十天就是三十天过期！    - 2020-07-14
+- 芝嫲视频   可以持有180天后才过期  体验卡周期是60天 这个够人道！ 我喜欢！  不像其他的矿，体验三十天就是三十天过期！    - 2020-07-15
+
+# 鲜绿有品  -2020-07-15
 
 - - -
 
-# 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-13 已打开  
+# 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-15 已打开  
 
 - - -
 
 
-- EPC生态环保链  - 个人算力必须大于1 ！！！   应该是要复投还是拉人怎么地！？ 或者是投资力度大于贡献值！？？    这个不看好！随时放弃！   - 2020-07-14
+- EPC生态环保链  - 个人算力必须大于1 ！！！   应该是要复投还是拉人怎么地！？ 或者是投资力度大于贡献值！？？    这个不看好！随时放弃！   - 2020-07-15
 
  - 复投一次看一下！
  
@@ -131,13 +133,13 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 ---
 
- # Free Space     应该能卖一两个   - 2020-07-14
+ # Free Space     应该能卖一两个   - 2020-07-15
 
 - - -
 
-# 凹音短视频      漏了好几天  到时候看一下能不能卖一两个   - 2020-07-14 
+# 凹音短视频      漏了好几天  到时候看一下能不能卖一两个   - 2020-07-15
 
-# 趣生活    - 2020 - 07 - 13  静态页面 跑路的节奏  - 2020-07-14 
+# 趣生活    - 2020 - 07 - 13  静态页面 跑路的节奏  - 2020-07-15 
 
 
 # 乐拍  初始时间： 2020-07-14    已打开 无漏签！ - 2020-07-15 
