--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -152,6 +152,15 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 # BitGold 比特黄金 初始时间：2020-07-16 
 
+
+- - -
+- - -
+- - -
+
+# 机车重新上路 老铁开挖！！！ 半路出家就只能卖一两个甚至不能卖得鸡贼设置都有！！！ 那种咱们就别管，加油开撸！！！
+
+# 乐驾  - 这几天有点忙 也忘了整了 好像不能放在APP上移动来去来玩啊 这个很容易半路出家，还是在Github记录吧。 -2020-07-22  - 2020-07-22  
+
 ---
 ---
 ---
