--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -146,7 +146,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 # 音恋 开始时间：2020-07-15     认证费1.5   -有绑定设备的，之前我的两台矿机就是因为有绑定设备给毁了。 一开始就奠定了你走不远，为什么？因为手机用几年就换了。      - 2020-07-15
 
-# EHT  初始时间：2020-07-16  
+# EHT  初始时间：2020-07-16  - 2020-07-22  
 
 # 美小贝  小程序 
 
