--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -139,7 +139,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 # 凹音短视频      漏了好几天  到时候看一下能不能卖一两个   - 2020-07-15
 
-# 趣生活    - 2020 - 07 - 13  静态页面 跑路的节奏  - 2020-07-15 
+# 趣生活    - 2020 - 07 - 13  静态页面 跑路的节奏  - 2020-07-22 
 
 
 # 乐拍  初始时间： 2020-07-14    已打开 无漏签！ - 2020-07-15 
@@ -160,6 +160,13 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 # 机车重新上路 老铁开挖！！！ 半路出家就只能卖一两个甚至不能卖得鸡贼设置都有！！！ 那种咱们就别管，加油开撸！！！
 
 # 乐驾  - 这几天有点忙 也忘了整了 好像不能放在APP上移动来去来玩啊 这个很容易半路出家，还是在Github记录吧。 -2020-07-22  - 2020-07-22  
+
+# 火刷视界 - 2020-7-18 （锁粉） - 2020-07-22 
+
+# 乡拍短视频 - 2020-7-21 -   2020-7-22 
+
+# 花艺趣 - 2020-07-21      没看懂 
+
 
 ---
 ---
