--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -169,6 +169,8 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 # 一加一 - 2020-20-23 - 2020-07-23 
 
+# Gala星球 - 2020-7-23   - 2020-07-23 
+
 ---
 ---
 ---
