--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -27,6 +27,8 @@
 
 # 标记一下初始时间和结束时间，两个月没有出的小矿机就不玩了吧，放着。静观其变。
 
+- 每一个矿机都有生命周期，问题是你需要在它生命周期结束之前能够有收益提取才算是有效的矿机。  注意一定要注意这点，看看一台矿机是否生命周期够长，不达到一个月的就不玩了，先观察两三个月都没事。 然后再入场，因为那个时候单价和佣金都算高的，到时候出的时候你也是小赚一笔的，不一定要在前期入，因为那个效益是比较少的。
+
 - - -
 
 - GEC  - 模式改了 每天要进去阅读一下！  贼难受！   - 2020-07-15   阅读完成！ 
