--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -173,6 +173,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 # Gala星球 - 2020-7-23   - 2020-07-23 
 
+# 侏罗纪 alpha版 （网页登陆 https://898.land/ ） - 2020-7-26 - 2020-07-26    
 ---
 ---
 ---
