--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -118,6 +118,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 # 鲜绿有品  -2020-07-15
 
+# HPC -20200729 -  20200729 
 - - -
 
 # 拉手短视频  - 没看懂 什么模式   先做一下！  反正60秒！  - 2020-07-15 已打开  
