--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -96,7 +96,7 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 
 - - -
 
-- 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 20200715 
+- 凹音短视频 ！ 在腾讯应用宝！ 应该跑不了！  加油撸一把！  谢谢你！  - 2020-07-30 
 
   - （右上角圈圈转满表示满4分钟，点击右上角“看广告领钻石”领取当天的0.5钻石。） 说实话现在4分钟对我来说挺久的做一个矿。 还有很多等我撸呢！ 加油吧！ 能撸则撸！ 从早撸到晚确实有点累，赚点钱不容易，撸点钱也不容易！
   
@@ -145,15 +145,16 @@ ELS 2020-07-11   好像没有漏签！   目前继续坚持！   2020-07-15
 # 趣生活    - 2020 - 07 - 13  静态页面 跑路的节奏  - 2020-07-22 
 
 
-# 乐拍  初始时间： 2020-07-14    已打开 无漏签！ - 2020-07-15 
-
 # 音恋 开始时间：2020-07-15     认证费1.5   -有绑定设备的，之前我的两台矿机就是因为有绑定设备给毁了。 一开始就奠定了你走不远，为什么？因为手机用几年就换了。      - 2020-07-15
 
-# EHT  初始时间：2020-07-16  - 2020-07-22  
+# EHT  初始时间：2020-07-16  - 2020-07-30 
 
 # 美小贝  小程序 
 
 # BitGold 比特黄金 初始时间：2020-07-16 
+
+# 环球善为生态 -2020-07-30
+
 
 
 - - -
