--- a/空投项目记录.md
+++ b/空投项目记录.md
@@ -20,6 +20,7 @@
 - 如果每个都坚持撸过去，一个月或者两个月（复投模式就是重新投一次，拉人模式就拉几个人稍微推广一下），剩下的研究一下交易模式和交易规则就行了！ 加油！！！
 
 - 每个项目力争去推广，不要一味想着零撸，我觉得能成为上家尽量去成为上家，每个项目尽量去推广收益也会比零撸扩大好几倍！！！ 加油！！！小伙子！！！
+# 把每一个矿机和OTC交易所都一一对应记录清楚，挖矿之后有空闲地时间还得去研究一下官网在哪里，OTC交易所在哪里，交流群也加几个，贴吧也都对应起来，这样子才能够防止丢失，把握细节...
 
 # 看看OTC交易所，动不动就是50个100个起卖的，就不要认证了，直接走吧，我感觉今天被反撸了，   持有几个币要是没有推广的人基本上是被割韭菜！
 
